MyDemoOrg/force-app/main/default/objects/signature__Record_Creation__mdt/signature__Record_Creation__mdt.object-meta.xml
<CustomObject>
    <description>Record created when a signature is completed.</description>
    <label>Record Creation</label>
    <pluralLabel>Record Creations</pluralLabel>
</CustomObject>