MyDemoOrg/force-app/main/default/objects/signature__Record_Creation__mdt/fields/signature__DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>signature__DefaultValue__c</fullName>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>