MyDemoOrg/force-app/main/default/objects/signature__Record_Creation__mdt/fields/signature__LeadField__c.field-meta.xml
<CustomField>
    <fullName>signature__LeadField__c</fullName>
    <label>Lead Field</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>