MyDemoOrg/force-app/main/default/objects/signature__Record_Creation__mdt/fields/signature__Signature_Field__c.field-meta.xml
<CustomField>
    <fullName>signature__Signature_Field__c</fullName>
    <label>Signature Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>