MyDemoOrg/force-app/main/default/objects/signature__Record_Creation__mdt/listViews/signature__All.listView-meta.xml
<ListView>
    <fullName>signature__All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>signature__LeadField__c</columns>
    <columns>signature__Signature_Field__c</columns>
    <columns>signature__DefaultValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>